tests/fixtures/invalid/bytes_bitand_dict.py
# Cannot bitwise AND Bytes and Dict[str, int]
x: bytes = b"hello" & {"a": 1}
